<resources>
    <string name="app_name">Neth</string>
    <string name="connect">Connect to Ethereum</string>
    <string name="clientName">Waiting for connection</string>
    <string name="createWallet">Create Wallet</string>
    <string name="getAddress">Address</string>
    <string name="CreateTXT">Create TXT</string>
    <string name="sendTransaction">Send Transaction</string>
    <string name="TransactionHash">Transaction Hash</string>
    <string name="setPassword">Set password</string>
    <string name="set_password">Set Password</string>
    <string name="password">Password</string>
    <string name="getBalance">Your Eth Balance</string>
    <string name="delete">Delete</string>
    <string name="transaction">Transaction</string>
    <string name="ethBalance">Ether</string>
    <string name="transactionHistory">Transaction History</string>
    <string name="transactions">Transactions</string>
    <string name="insertAddress">Please insert the receiver address below</string>
    <string name="insertValue">Please insert the desired amount of ether to transfer</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="info">Info</string>
    <string name="uploadDocument">Upload Document</string>
    <string name="walletAddress">Address</string>
    <string name="copy">Copy</string>
    <string name="signUp">Sign Up</string>
    <string name="insertHash">Write your IPFS hash below</string>
    <string name="eSKInsert">Write your eSK  below</string>
    <string name="insertPassword">Insert Password</string>
    <string name="upload_Wallet">Upload Wallet</string>
    <string name="downloadWallet">Download Wallet</string>
    <string name="recover">Recover Wallet</string>
    <string name="insertPassphrase">Insert the mnemonic phrase</string>
    <string name="paste">Paste from clipboard</string>
    <string name="recoverWallet">Recover</string>
    <string name="memorizePasspharse">Memorize this passphrase</string>
    <string name="done">Done</string>
    <string name="pasteAddress">Paste</string>
    <string name="contracts">Contracts</string>
    <string name="unlock_wallet">Unlock Wallet</string>
    <string name="getAllHash">get the hash of every uploaded document</string>
    <string name="connectedToEthereum">Connected to Ethereum</string>
    <string name="activity_name">Neth - Android Wallet Manager</string>
    <string name="files">Files</string>
    <string name="register">register your account</string>
    <string name="uploaded_documents">List of uploaded documents</string>
    <string name="next">Next</string>
</resources>
